syntax = "proto3";
package grpc.models;
option go_package = "github.com/iggydv12/nomad-go/gen/proto/models";

message GameObjectGrpc {
  string id = 1;
  int64 creationTime = 2;
  int64 ttl = 3;
  bytes value = 4;
  int64 lastModified = 5;
}
